# webgl-fun

./: .clang-format  .gitignore  CMakeLists.txt  index.html  index.js  index.wasm  license.txt  readme.md
pointclouds/: colmap_to_bin.py  workbench.pointcloud
src/: io.hpp  main.cpp  shader.cpp  shader.hpp
src/shaders/: points.f.glsl  points.v.glsl
